--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     gateway:
       routes:
         - id: dog
-          uri: http://localhost:8081
+          uri: https://dog-spring-service.herokuapp.com/ # TODO: need to change
           predicates:
             - Path=/dog/**
           filters:
