using zuul gateway, routing calls made for /api/dog

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,16 @@
-spring:
-  cloud:
-    gateway:
-      routes:
-        - id: dog
-          uri: https://dog-spring-service.herokuapp.com/
-          predicates:
-            - Path=/dog/**
-          filters:
-            - AddResponseHeader=Access-Control-Allow-Origin, *
+zuul:
+  routes:
+    dog:
+      path: /api/dog/**
+      url: https://dog-spring-service.herokuapp.com/dog
+
+#spring:
+#  cloud:
+#    gateway:
+#      routes:
+#        - id: dog
+#          uri: https://dog-spring-service.herokuapp.com/
+#          predicates:
+#            - Path=/dog/**
+#          filters:
+#            - AddResponseHeader=Access-Control-Allow-Origin, *
