--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,26 @@
-buildscript {
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.7.RELEASE")
-	}
+plugins {
+	id 'org.springframework.boot' version '2.2.4.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+	id 'java'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-bootJar {
-	baseName = 'gateway-service-example'
-	version =  '0.1.0'
-}
+group = 'com.lucas'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '13'
 
 repositories {
 	mavenCentral()
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul:2.2.1.RELEASE'
 
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR2"
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 }
 
-dependencies {
-	compile("org.springframework.cloud:spring-cloud-starter-gateway")
-	compile("org.springframework.cloud:spring-cloud-starter-netflix-hystrix")
-	compile("org.springframework.cloud:spring-cloud-starter-contract-stub-runner"){
-		exclude group: "org.springframework.boot", module: "spring-boot-starter-web"
-	}
-	testCompile("org.springframework.boot:spring-boot-starter-test")
+test {
+	useJUnitPlatform()
 }
