--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,19 @@
+server.port: ${PORT}
+
 zuul:
   routes:
     dog:
-      path: /api/dog/**
-      url: ${DOG_SERVICE_URL}/dog
+      path: /api/dogs/**
+      url: ${DOG_SERVICE_URL}/dogs
+
+
+#spring:
+#  cloud:
+#    gateway:
+#      routes:
+#        - id: dogService
+#          uri: http://localhost:8081/
+#          predicates:
+#            - Path=/api/dog/**
+#          filters:
+#            - AddResponseHeader=Access-Control-Allow-Origin, *
